--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </td>
     <td>
       <h1>Manoj Sai Prasad</h1>
-      <p><em>Founder of <strong>MSP Solutions</strong>.</em><br>
+      <p><em>Founder of <strong>M² Solutions</strong>.</em><br>
         I am a computer science garduate. I love to code.
       </p>
     </td>
