--- a/contact-me.html
+++ b/contact-me.html
@@ -7,5 +7,11 @@
     <h1>Contact me here 👇🏻</h1>
     <p><strong>Ph.no: </strong>8106164075</p>
     <p><strong>Email id: </strong>manojsaiprasad2551@gmail.com</p>
+    <form action="mailto:manojsaiprasad2551@gmail.com" method="post" enctype="text/plain">
+      Enter your name:<input type="text" name="yourName" value="" placeholder="Enter your name"><br>
+      Email:<input type="email" name="yourEmail" value="" placeholder="Enter your email"><br>
+      Your message:<br><textarea name="yourMessage" rows="10" cols="30"></textarea><br>
+      <input type="submit" name="" value="Submit">
+    </form>
   </body>
 </html>
